# weather-forecast-mlops

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: cd-deploy.yml  ci-tests.yml
deployment/: deploy.sh  generate_env.sh  ssm-config.ini
grafana/config/: grafana_alert_rules.yaml  grafana_contact_point.yaml  grafana_dashboards.yaml  grafana_datasources.yaml  grafana_notification_rules.yaml
grafana/dashboards/: dashboard.json
infrastructure/: .terraform.lock.hcl  main.tf  modules.tf  variables.tf
infrastructure/modules/ec2/: main.tf  user_data.sh  variables.tf
infrastructure/modules/iam/: main.tf  variables.tf
infrastructure/modules/rds/: postgres.tf  rds.tf  variables.tf
infrastructure/modules/s3/: main.tf  variables.tf
infrastructure/modules/sg/: main.tf
infrastructure/vars/: dev.tfvars  prod.tfvars
mlflow/: Dockerfile
orchestrator/: .pre-commit-config.yaml  Dockerfile  Pipfile  dagster.yaml  pyproject.toml  requirements.txt
orchestrator/mlops/: __init__.py
orchestrator/mlops/assets/: batch_forecasting.py  config.py  ingestion.py  training.py
orchestrator/mlops/ddl/: weather_world.sql  weather_world_forecast.sql  weather_world_forecast_metrics.sql  weather_world_forecast_missing_value.sql
orchestrator/mlops/scripts/: database.py  evaluate.py  forecast.py  ingest.py  preprocess.py  register_model.py  train.py
orchestrator/mlops/tests/: test_evaluate.py  test_forecast.py  test_preprocess.py  test_train.py
